[ refactor, build ] : 실제 DB 구조에 맞게 리펙, 자바 버전 다운그레이드, DB 설정 secret 파일로 변경