@@ -9,7 +9,9 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * OldMan(노인/대상자) 도메인 서비스.
@@ -25,20 +27,38 @@ public class OldManService {
     private final OldManRepository oldManRepository;
 
     /**
+     * 오늘 00:00 이후 등록된 OldMan 목록을 조회한다.
+     *
+     * @return 알림톡 발송 대상 OldMan 목록
+     */
+    public List<OldMan> getOldMenForAlim() {
+        LocalDate now = LocalDate.now();
+
+        String todayStr = now.format(DateTimeFormatter.ofPattern("yyyyMMdd"));
+
+        log.info("변환 날짜 : " + todayStr);
+
+        return oldManRepository.findBySmsdate("20260304");
+    }
+
+    /**
      * 오늘 00:00 이후 등록된 OldMan을 조회한 뒤, 알림톡 수신자 포맷(ReceiverDto) 리스트로 변환해 반환한다.
-     * <p>
-     * 스케줄러 또는 API에서 알림 발송 대상 목록을 얻을 때 사용한다.
-     * </p>
      *
      * @return 알림톡 API receiver 형식으로 변환된 수신자 목록
      */
     public List<ReceiverDto> getReceiversForAlim() {
-
-        LocalDateTime todayStart = LocalDate.now().atStartOfDay();
-        List<OldMan> list = oldManRepository.findByCrtdtAfter(todayStart);
-        return list.stream()
+        return getOldMenForAlim().stream()
                 .map(this::toReceiverDto)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    /**
+     * 전달된 OldMan 목록을 ReceiverDto 목록으로 변환한다.
+     */
+    public List<ReceiverDto> getReceiversFromOldMen(List<OldMan> oldMen) {
+        return oldMen.stream()
+                .map(this::toReceiverDto)
+                .collect(Collectors.toList());
     }
 
     /**
@@ -50,12 +70,10 @@ public class OldManService {
     private ReceiverDto toReceiverDto(OldMan man) {
         ReceiverDto dto = new ReceiverDto();
         dto.setDstaddr(man.getMgrphone());
-        dto.setOptName(man.getCname());
+        dto.setOptName(man.getMgrname());
         dto.setText("카카오 알림톡");
         dto.setText2("대체 발송 텍스트");
-        dto.setKakaoVariable1("var1");
-        dto.setKakaoVariable2(man.getAddress());
-        dto.setKakaoVariable3("var3");
+        dto.setKakaoVariable1(man.getSmsmsg());
         return dto;
     }
 }
